--- a/frontFarm/src/app/pages/surtir-farmacia/surtir-farmacia.component.html
+++ b/frontFarm/src/app/pages/surtir-farmacia/surtir-farmacia.component.html
@@ -42,6 +42,7 @@
         <th>Omit</th>
         <th>Producto</th>
         <th>Cód. Barras</th>
+        <th>Categoría</th>
         <th>Existencia</th>
         <th>Stock Mínimo</th>
         <th>Stock Máximo</th>
@@ -57,6 +58,7 @@
         </td>
         <td>{{ p.nombre }}</td>
         <td>{{ p.codigoBarras }}</td>
+        <td>{{ p.categoria }}</td>
         <td>{{ p.existenciaActual }}</td>
         <td>{{ p.stockMin }}</td>
         <td>{{ p.stockMax }}</td>
