--- a/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
+++ b/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.html
@@ -18,6 +18,8 @@
                 <input type="number" formControlName="stockMaximo" style="width: 4rem;">
                 <label>IVA:</label>
                 <input type="checkbox" formControlName="iva">
+                <label>Genérico:</label>
+                <input type="checkbox" formControlName="generico">
             </div>
             <div class="edit-seccion">
                 <label>INAPAM:</label>
